# bevy-issue-8992

./: .gitignore  .gitmodules  Cargo.toml  README.md  index.html
.github/workflows/: build.yml
src/: assets.rs  config.rs  loading.rs  logging.rs  main.rs  play.rs  state.rs
